--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 *{position: relative;
 width: 1366px;
 height: 1701px;
+padding: 0;
+margin: 0;
 
 background: #FFFFFF;
 }
@@ -16,6 +18,95 @@ box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 height: 2508px;
 width: 220px;
 border-radius: 0px;
+}
+
+header{
+position:absolute;
+width: 100%;
+height: 68px;
+left: 0px;
+top: 0px;
+background : #FDF1EB;
+}
+
+.txt-header{
+margin-left: 220px;
+background-color: #FDF1EB;
+height: 68px;
+
+}
+
+.idioma{
+    position: absolute;
+    width: 97px;
+    height: 34px;
+    left: 789px;
+    top: 17px;
+    border: 1px solid #CCCCCC;
+    box-sizing: border-box;
+    border-radius: 3px;
+    background-color: transparent;
+    text-align:center;
+}
+.txt-header h2{
+font-size: 14px;
+width: 391px;
+height: 16px;
+left: 36px;
+top: 5px;
+font-family:"Roboto";
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 16px;
+background-color: #FDF1EB;
+color: #725C5C;
+}
+.txt-header h1{
+font-size: 22px;
+color:#725C5C;
+background-color:#FDF1EB;
+width: 643px;
+height: 26px;
+left: 36px;
+line-height: 26px;
+}
+
+.txt-header h3{
+    position: absolute;
+width: 105px;
+height: 16px;
+left: 36px;
+top: 48px;
+
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 16px;
+background-color:#FDF1EB ;
+color: #725C5C;
+
+}
+
+.bem-vindo{
+ position: absolute;
+width: 72px;
+height: 18px;
+left: 999px;
+top: 17px;
+
+font-family:Quicksand;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 17px;
+
+
+text-align: right;
+
+color: #333333;
+
 }
 .rectangle{ 
 position: absolute;
