--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-*{position: relative;
+*
+{position: relative;
 width: 1366px;
 height: 1701px;
 padding: 0;
@@ -32,6 +33,7 @@ background : #FDF1EB;
 .txt-header{
 margin-left: 220px;
 background-color: #FDF1EB;
+width:70em;
 height: 68px;
 
 }
@@ -90,24 +92,65 @@ color: #725C5C;
 }
 
 .bem-vindo{
- position: absolute;
+position: absolute;
 width: 72px;
 height: 18px;
 left: 999px;
 top: 17px;
-
+background-color: transparent;
 font-family:Quicksand;
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
 line-height: 17px;
-
-
 text-align: right;
-
 color: #333333;
-
 }
+
+.email{
+ position: absolute;
+width: 163px;
+height: 15px;
+left: 908px;
+top: 36px;
+font-family: Quicksand;
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 15px;
+text-align: right;
+color: #333333;
+background-color: transparent;
+}
+
+.img-user{
+position: absolute;
+left: 93.28%;
+right: 2.53%;
+top: 27.94%;
+bottom: 27.94%;
+height: 30px;
+width: 30px;
+left: 1069.0000610351562px;
+top: 19px;
+border-radius: 0px;
+background-color: transparent;
+}
+
+.circulo{
+position: absolute;
+left: 81%;
+right: 0%;
+top: 20%;
+bottom: 0%;
+height: 12px;
+width: 12px;
+left: 1069.0000610351562px;
+border-radius: 10px;   
+background: #F85959;
+border-radius: 10px;
+}
+
 .rectangle{ 
 position: absolute;
 right: 0%;
@@ -177,4 +220,71 @@ nav a:hover {
     background-color:  rgba(253, 241, 235, 1);
     border-left: 3px solid
     rgba(237, 120, 57, 1);
+}
+
+.conteudo{
+    position: absolute;
+    width: 1059px;
+    height: 1382px;
+    left: 263px;
+    top: 88px;
+}
+
+.titulo{
+position: absolute;
+height: 54px;
+left: 0px;
+right: 273px;
+top: 0px;
+font-family: Roboto;
+font-style: normal;
+font-weight: 900;
+font-size: 20px;
+line-height: 25px;
+letter-spacing: 0.05em;
+color: #ED7839;
+height: 54px;
+width: 786px;
+left: 0px;
+top: 0px;
+border-radius: nullpx;
+}
+
+.dowload{
+ height: 31px;
+width: 120px;
+left: 842px;
+top: 0px;
+position: absolute;
+left: 79.51%;
+right: 9.16%;
+bottom: 97.76%;
+color: #FDF1EB;
+background: #ED7839;
+border-radius: 4px;
+border:none;
+}
+
+.favorito{
+ height: 31px;
+width: 43px;
+left: 967px;
+top: 0px;
+border-radius: 4px;
+color: #FDF1EB;
+background: #ED7839;
+border-radius: 4px;
+border:none;
+}
+
+.doi{
+height: 31px;
+width: 43px;
+left: 967px;
+top: 0px;
+border-radius: 4px;
+color: #FDF1EB;
+background: #ED7839;
+border-radius: 4px;
+border:none;
 }
