--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ html{
     
     }
 
+
+
 .side-bar-shadow{
  position: absolute;
 left: 0%;
@@ -21,7 +23,7 @@ top: 0%;
 bottom: -47.44%;
 background: #FFFFFF;
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-height: 2008px;
+height: 2410px;
 width: 220px;
 border-radius: 0px;
 }
@@ -44,6 +46,7 @@ height: 68px;
 }
 
 .idioma{
+  background-image: url(/img/botão\ -\ idiomas.png);
     position: absolute;
     width: 97px;
     height: 34px;
@@ -271,6 +274,7 @@ background: #ED7839;
 border-radius: 4px;
 border:none;
 cursor: pointer;
+background-image: url(/img/download\ button.png);
 }
 
 .favorito{
@@ -284,6 +288,8 @@ background: #ED7839;
 border-radius: 4px;
 border:none;
 cursor: pointer;
+
+background-image: url(/img/favorite\ button.png);
 }
 
 .doi{
@@ -297,6 +303,8 @@ background: #ED7839;
 border-radius: 4px;
 border:none;
 cursor: pointer;
+
+background-image: url(/img/doi\ button.png);
 }
 
 .video{
@@ -725,7 +733,7 @@ border-radius: 0px 0px 3px 4px;
 }
 
 .mensagem{
-  
+  display: hidden;
   height: 350px;
   width: 1056px;
   top: -12px;
@@ -869,7 +877,7 @@ border-radius: 4px;
 .final{
 position: absolute;
 right: 4.01%;
-top:120%;
+top:155%;
 bottom: 0%;
 left:0%;
 width: 0px;
@@ -884,4 +892,5 @@ bottom: 0%;
 width: 1066px;
 left: 1%;
 height: 181px;
+cursor: pointer;
 }
