--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ height: 68px;
     border-radius: 3px;
     background-color: transparent;
     text-align:center;
+    cursor: pointer;
 }
 .txt-header h2{
 font-size: 14px;
@@ -343,6 +344,7 @@ top: 73px;
 border: 1px solid rgba(236, 236, 236, 1);
 }
 
+
 .titulo-painel{
 position: absolute;
 width: 242px;
@@ -374,6 +376,7 @@ font-size: 16px;
 line-height: 120%;
 letter-spacing: 0.02em;   
 color: #5C5C5C;   
+
 }
 
 .txt-resumo{
@@ -386,6 +389,7 @@ border: 1px solid #ECECEC;
 box-sizing: content-box;
 border-radius: 3px;
 box-sizing: content-box;
+
 
 
 }
@@ -406,6 +410,7 @@ line-height: 25px;
 display: flex;
 align-items: center;
 color: #4E4E4E;
+
 }
 
 .txt-resumo-um{
